Fix nav right-align with !important

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,11 +58,12 @@
 
 /* Right-align Research + CV + theme toggle */
 .greedy-nav .visible-links {
-  display: flex;
+  display: flex !important;
   align-items: center;
+  width: 100%;
 }
-.greedy-nav .visible-links .masthead__menu-item--lg {
-  margin-right: auto;
+.greedy-nav .visible-links > li:first-child {
+  margin-right: auto !important;
 }
 
 /* Wider sidebar column + adjusted page width */
